--- a/now.json
+++ b/now.json
@@ -1,5 +1,7 @@
 {
   "version": 2,
-  "alias": "github-e2e-production.now.sh"
+  "builds": [
+  	{ "src": "build.sh", "use": "@now/static-build" }
+  ]
 }
 
