--- a/now.json
+++ b/now.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "builds": [
-  	{ "src": "build.sh", "use": "@now/static-build" }
+  	{ "src": "package.json", "use": "@now/static-build" }
   ]
 }
 
