--- a/now.json
+++ b/now.json
@@ -1,7 +1,4 @@
 {
   "version": 2,
-  "alias": "github-e2e-production.now.sh",
-  "env": {
-    "FOO": "@foo"
-  }
+  "alias": "github-e2e-production.now.sh"
 }
