--- a/now.json
+++ b/now.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
-  "alias": "github-e2e-production.now.sh"
+  "alias": "github-e2e-production.now.sh",
+  "scope": "will-be-ignored"
 }
 
